width fix to header title on mobile

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -27,6 +27,9 @@
                 }
             }
         }
+        .logo {
+            max-width: 60%;
+        }
     }
 
     ul {
